Custon numeric dial

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hola Mundo"/>
+    <com.projects.aldajo92.dialercombinations.DialerView
+        android:id="@+id/dialerView"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:background="@drawable/dialer" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+    <com.projects.aldajo92.dialercombinations.NumericDialerView
+        android:id="@+id/dialerView2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/dialerView" />
+
+<!--    <ImageView-->
+<!--        android:id="@+id/dialerViewTop"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:src="@drawable/dialer_top"-->
+<!--        app:layout_constraintBottom_toBottomOf="@id/dialerView"-->
+<!--        app:layout_constraintEnd_toEndOf="@id/dialerView"-->
+<!--        app:layout_constraintStart_toStartOf="@id/dialerView"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/dialerView" />-->
+
+</androidx.constraintlayout.widget.ConstraintLayout>
