added layer dial

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.75" />
+
     <ImageView
         android:id="@+id/dialerViewTop"
         android:layout_width="0dp"
@@ -16,13 +23,69 @@
         app:layout_constraintStart_toStartOf="@id/dialerView"
         app:layout_constraintTop_toTopOf="@+id/dialerView" />
 
+
+    <TextView
+        android:id="@+id/textView_dialer"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:gravity="center"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontal"
+        app:layout_constraintBottom_toTopOf="@id/editText_result"
+        app:layout_constraintEnd_toStartOf="@id/button_calculate"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/dialerView"
+        tools:text="123" />
+
     <com.projects.aldajo92.dialercombinations.NumericDialerView
         android:id="@+id/dialerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/textView_dialer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/button_calculate"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:text="calculate"
+        app:layout_constraintBottom_toBottomOf="@id/textView_dialer"
+        app:layout_constraintEnd_toStartOf="@id/button_delete"
+        app:layout_constraintStart_toEndOf="@id/textView_dialer"
+        app:layout_constraintTop_toTopOf="@id/textView_dialer" />
+
+    <Button
+        android:id="@+id/button_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginEnd="20dp"
+        android:text="delete"
+        app:layout_constraintBottom_toBottomOf="@id/textView_dialer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/button_calculate"
+        app:layout_constraintTop_toTopOf="@id/textView_dialer" />
+
+    <EditText
+        android:id="@+id/editText_result"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:enabled="true"
+        android:focusableInTouchMode="false"
+        android:scrollbars="vertical"
+        android:verticalScrollbarPosition="right"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal"
+        tools:text="pablito pablito palpablito pablito palpablito pablito palpablito pablito palpablito pablito palpablito pablito palpablito pablito palpablito pablito palpablito pablito palpablito pablito palpablito pablito palpablito pablito palpablito pablito pablito palpablito pablito palpablito pablito palpablito pablito palpablito pablito palpablito pablito palpablito pablito palpablito pablito palpablito pablito palpablito pablito palpablito pablito palpablito palpablito pablito pal" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
